--- a/ui/main.ui
+++ b/ui/main.ui
@@ -562,7 +562,7 @@ border: none;</string>
              <string notr="true"/>
             </property>
             <property name="currentIndex">
-             <number>0</number>
+             <number>1</number>
             </property>
             <widget class="QWidget" name="parameters_page">
              <layout class="QFormLayout" name="formLayout">
@@ -917,9 +917,14 @@ border-radius: 20px;</string>
                   <verstretch>0</verstretch>
                  </sizepolicy>
                 </property>
+                <property name="maximumSize">
+                 <size>
+                  <width>16777215</width>
+                  <height>580</height>
+                 </size>
+                </property>
                 <property name="styleSheet">
-                 <string notr="true">border: 1px solid black;
-border-radius: 20px;</string>
+                 <string notr="true"/>
                 </property>
                 <property name="frameShape">
                  <enum>QFrame::StyledPanel</enum>
@@ -930,6 +935,9 @@ border-radius: 20px;</string>
                 <layout class="QVBoxLayout" name="verticalLayout_9">
                  <property name="spacing">
                   <number>0</number>
+                 </property>
+                 <property name="sizeConstraint">
+                  <enum>QLayout::SetMaximumSize</enum>
                  </property>
                  <property name="leftMargin">
                   <number>0</number>
@@ -948,6 +956,9 @@ border-radius: 20px;</string>
                    <property name="spacing">
                     <number>0</number>
                    </property>
+                   <property name="sizeConstraint">
+                    <enum>QLayout::SetMaximumSize</enum>
+                   </property>
                   </layout>
                  </item>
                 </layout>
@@ -955,6 +966,18 @@ border-radius: 20px;</string>
               </item>
               <item>
                <widget class="QFrame" name="button_frame">
+                <property name="sizePolicy">
+                 <sizepolicy hsizetype="Preferred" vsizetype="Minimum">
+                  <horstretch>0</horstretch>
+                  <verstretch>0</verstretch>
+                 </sizepolicy>
+                </property>
+                <property name="minimumSize">
+                 <size>
+                  <width>0</width>
+                  <height>30</height>
+                 </size>
+                </property>
                 <property name="styleSheet">
                  <string notr="true"/>
                 </property>
@@ -983,7 +1006,7 @@ border-radius: 20px;</string>
                  <item alignment="Qt::AlignHCenter">
                   <widget class="QPushButton" name="draw_button">
                    <property name="sizePolicy">
-                    <sizepolicy hsizetype="Minimum" vsizetype="Preferred">
+                    <sizepolicy hsizetype="Minimum" vsizetype="Fixed">
                      <horstretch>0</horstretch>
                      <verstretch>0</verstretch>
                     </sizepolicy>
